--- a/php/dockerfile
+++ b/php/dockerfile
@@ -1,7 +1,7 @@
 FROM php:7.4-fpm
 
-RUN apt update \
-    && apt install -y zlib1g-dev g++ git libicu-dev zip libzip-dev \
+RUN apt-get update \
+    && apt-get install -y zlib1g-dev g++ git libicu-dev zip libzip-dev \
     && docker-php-ext-install intl opcache pdo pdo_mysql \
     && pecl install apcu \
     && docker-php-ext-enable apcu \
@@ -15,4 +15,4 @@ WORKDIR /var/www/app
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer \
     && composer self-update --1 \
-    && apt install -y nodejs npm
+    && apt-get install -y nodejs npm
